Fix Mongo read/write converters for ZonedDateTime and remove codec. Implement get product api with cache-control header