@@ -1,47 +1,18 @@
 package com.yrlalal.productservice.impl.mongo;
 
-import com.mongodb.ConnectionString;
-import com.mongodb.MongoClientSettings;
-import com.yrlalal.productservice.impl.mongo.codec.ZonedDateTimeCodec;
-import org.bson.codecs.configuration.CodecRegistries;
-import org.bson.codecs.configuration.CodecRegistry;
-import org.springframework.beans.factory.annotation.Value;
+import com.yrlalal.productservice.impl.mongo.converter.ZonedDateTimeReadConverter;
+import com.yrlalal.productservice.impl.mongo.converter.ZonedDateTimeWriteConverter;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.data.mongodb.config.AbstractMongoClientConfiguration;
 import org.springframework.data.mongodb.core.convert.MongoCustomConversions;
 
-import java.util.Collections;
+import java.util.List;
 
 @Configuration
-public class MongoConfig extends AbstractMongoClientConfiguration {
-    @Value("${spring.data.mongodb.database}")
-    private String database;
-
-    @Value("${spring.data.mongodb.uri}")
-    private String mongoUri;
-
-    @Override
-    protected String getDatabaseName() {
-        return database;
-    }
-
-    @Override
-    @Bean
-    public MongoClientSettings mongoClientSettings() {
-        CodecRegistry codecRegistry = CodecRegistries.fromRegistries(
-                MongoClientSettings.getDefaultCodecRegistry(),
-                CodecRegistries.fromCodecs(new ZonedDateTimeCodec()));
-
-        return MongoClientSettings.builder()
-                .applyConnectionString(new ConnectionString(mongoUri))
-                .codecRegistry(codecRegistry)
-                .build();
-    }
-
+public class MongoConfig {
     @Bean
     public MongoCustomConversions mongoCustomConversions() {
-        return new MongoCustomConversions(Collections.emptyList());
+        return new MongoCustomConversions(List.of(new ZonedDateTimeReadConverter(), new ZonedDateTimeWriteConverter()));
     }
 }
 
